resolvendo problema da scrollbar-thumb no css do header

--- a/assets/css/elements/header.css
+++ b/assets/css/elements/header.css
@@ -83,7 +83,7 @@ p a:hover {
     width: 6px;
     background: #1764ff;
 }
-::-webkit-scrollbar-thumb {
+/* ::-webkit-scrollbar-thumb {
     background: #1764ff;
-}
+} */
 
